--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             </div>
             <div class="col-md-9">
-                <img class="img-responsive" src="C:\Users\srira\Desktop\BNV SOFTWARE TECH\Ai3.JPG" width="1000px"alt="IMG">
+                <img class="img-responsive" src="C:\Users\srira\Desktop\BNV SOFTWARE TECH\Ai3.jpg" width="1000px"alt="IMG">
 
             </div>
         </div>
