--- a/creativity.html
+++ b/creativity.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="col-md-12">
-                    <img class="img-responsive" src="C:\Users\srira\Desktop\BNV SOFTWARE TECH\A.JPG" width="1000px"alt="IMG">
+                    <img class="img-responsive" src="assets/A.jpg" width="1000px"alt="IMG">
     
                 </div>  
             </div>
