--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="col-md-12">
-                    <img class="img-responsive" src="C:\Users\srira\Desktop\BNV SOFTWARE TECH\D.JPG" width="1000px"alt="IMG">
+                    <img class="img-responsive" src="assets/D.jpg" width="1000px"alt="IMG">
     
                 </div>  
             </div>
