--- a/specialization.html
+++ b/specialization.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="col-md-12">
-                    <img class="img-responsive" src="C:\Users\srira\Desktop\BNV SOFTWARE TECH\B.JPG" width="1000px"alt="IMG">
+                    <img class="img-responsive" src="assets/B.jpg" width="1000px"alt="IMG">
     
                 </div>  
             </div>
