--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
                 <a href="#" class="navbar-brand navbar-default">FIND US</a>
 
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li><a href="Phase 2.html"><i class="glyphicon glyphicon-log-in"></i> BACK</a></li>
+                    <li><a href="index.html"><i class="glyphicon glyphicon-log-in"></i> BACK</a></li>
                 </ul>    
         </div>        
     </nav>
